Adicionando origens permitidas na configuração de CORS